AgentHackathon/force-app/main/default/objects/Line_Item__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a day</fullName>
            </value>
            <value>
                <fullName>Twice a day</fullName>
            </value>
            <value>
                <fullName>Thrice a day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>