AgentHackathon/force-app/main/default/objects/Line_Item__c/fields/Use_for_Days__c.field-meta.xml
<CustomField>
    <fullName>Use_for_Days__c</fullName>
    <label>Use for Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>